--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,14 @@ version = "0.1.0"
 
 [deps]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 LazyInverse = "d0afe1cb-6484-4949-b9e9-61bc645ed6c7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearAlgebraExtensions = "cb114d4a-f1bd-499c-ad9e-7f2ed74575b9"
 Metrics = "c142dcad-aa7a-4cb0-9847-771ddcebca7d"
+Optimization = "5eef6961-c6df-46a7-ba44-0f01c6045f8f"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
+WoodburyIdentity = "49563772-d9e4-48b4-a8b6-4cbe661ead9f"
