--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ LazyInverse = "d0afe1cb-6484-4949-b9e9-61bc645ed6c7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearAlgebraExtensions = "cb114d4a-f1bd-499c-ad9e-7f2ed74575b9"
 Metrics = "c142dcad-aa7a-4cb0-9847-771ddcebca7d"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
