--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["sebastianament "]
 version = "0.1.0"
 
 [deps]
+DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 KroneckerProducts = "1b19e153-50d3-4699-8064-93bcb9fb4fba"
