made lazy linear algebra to external dependency

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 KroneckerProducts = "1b19e153-50d3-4699-8064-93bcb9fb4fba"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LazyInverse = "d0afe1cb-6484-4949-b9e9-61bc645ed6c7"
+LazyLinearAlgebra = "2243f6fe-7ec1-4b08-8ffc-03329353bf89"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearAlgebraExtensions = "cb114d4a-f1bd-499c-ad9e-7f2ed74575b9"
 OptimizationAlgorithms = "5eef6961-c6df-46a7-ba44-0f01c6045f8f"
