--- a/Project.toml
+++ b/Project.toml
@@ -4,18 +4,31 @@ authors = ["sebastianament"]
 version = "0.1.0"
 
 [deps]
+BlockFactorizations = "5c499583-5bfe-4591-9b59-c1e192d48697"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 KroneckerProducts = "1b19e153-50d3-4699-8064-93bcb9fb4fba"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
-LazyInverse = "d0afe1cb-6484-4949-b9e9-61bc645ed6c7"
-LazyLinearAlgebra = "2243f6fe-7ec1-4b08-8ffc-03329353bf89"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-LinearAlgebraExtensions = "cb114d4a-f1bd-499c-ad9e-7f2ed74575b9"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
-WoodburyIdentity = "49563772-d9e4-48b4-a8b6-4cbe661ead9f"
+WoodburyFactorizations = "9f1bac23-581c-4ebc-bd36-df60d764636d"
+
+[compat]
+BlockFactorizations = "1.1"
+DiffResults = "1.0"
+FillArrays = "0.12"
+ForwardDiff = "0.10"
+IterativeSolvers = "0.9"
+KroneckerProducts = "1.0"
+LazyArrays = "0.22"
+SpecialFunctions = "2.0"
+TaylorSeries = "0.11"
+ToeplitzMatrices = "0.7"
+WoodburyFactorizations = "1.0"
+julia = "1.7"
