CompatHelper: add new compat entry for NearestNeighbors at version 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
+NearestNeighbors = "0.4"
 SpecialFunctions = "2.0"
 TaylorSeries = "0.11"
 ToeplitzMatrices = "0.7"
