--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
 SpecialFunctions = "2.0"
+StaticArrays = "1"
 TaylorSeries = "0.11"
 ToeplitzMatrices = "0.7"
 WoodburyFactorizations = "1.0"
