--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,9 @@ ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
+NearestNeighbors = "0.4"
 SpecialFunctions = "2.0"
+StaticArrays = "1.3"
 TaylorSeries = "0.11"
 ToeplitzMatrices = "0.7"
 WoodburyFactorizations = "1.0"
