--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ WoodburyFactorizations = "9f1bac23-581c-4ebc-bd36-df60d764636d"
 [compat]
 BlockFactorizations = "1.1"
 DiffResults = "1.0"
-FillArrays = "0.12"
+FillArrays = "0.12, 0.13"
 ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
