--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ LazyArrays = "0.22"
 NearestNeighbors = "0.4"
 SpecialFunctions = "2.0"
 StaticArrays = "1.3"
-TaylorSeries = "0.11"
+TaylorSeries = "0.11, 0.12"
 ToeplitzMatrices = "0.7"
 WoodburyFactorizations = "1.0"
 julia = "1.7"
