--- a/Project.toml
+++ b/Project.toml
@@ -24,15 +24,15 @@ WoodburyFactorizations = "9f1bac23-581c-4ebc-bd36-df60d764636d"
 [compat]
 BlockFactorizations = "1.1"
 DiffResults = "1.0"
-FillArrays = "0.12"
+FillArrays = "0.12, 0.13"
 ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
 NearestNeighbors = "0.4"
 SpecialFunctions = "2.0"
-StaticArrays = "1.3"
-TaylorSeries = "0.11"
+StaticArrays = "1"
+TaylorSeries = "0.11, 0.12"
 ToeplitzMatrices = "0.7"
 WoodburyFactorizations = "1.0"
 julia = "1.7"
