--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ BlockFactorizations = "5c499583-5bfe-4591-9b59-c1e192d48697"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 KroneckerProducts = "1b19e153-50d3-4699-8064-93bcb9fb4fba"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
