CompatHelper: add new compat entry for BesselK at version 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
 WoodburyFactorizations = "9f1bac23-581c-4ebc-bd36-df60d764636d"
 
 [compat]
+BesselK = "0.3"
 BlockFactorizations = "1.2.1"
 DiffResults = "1.0"
 FillArrays = "0.12, 0.13"
