--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ LazyArrays = "0.22"
 NearestNeighbors = "0.4"
 SpecialFunctions = "2.0"
 StaticArrays = "1"
+SymEngine = "0.8"
 TaylorSeries = "0.11, 0.12"
 ToeplitzMatrices = "0.7"
 WoodburyFactorizations = "1.0"
