--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ BlockFactorizations = "1.2.1"
 DiffResults = "1.0"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.10"
+Functors = "0.2"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
