CompatHelper: add new compat entry for Flux at version 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ BesselK = "0.3"
 BlockFactorizations = "1.2.1"
 DiffResults = "1.0"
 FillArrays = "0.12, 0.13"
+Flux = "0.13"
 ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
