--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,13 @@
 name = "CovarianceFunctions"
 uuid = "b3329135-7958-41d4-bb02-e084c5a526bf"
 authors = ["sebastianament"]
-version = "0.3.0"
+version = "0.3.1"
 
 [deps]
 BesselK = "432ab697-7a72-484f-bc4a-bc531f5c819b"
 BlockFactorizations = "5c499583-5bfe-4591-9b59-c1e192d48697"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
