--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ WoodburyFactorizations = "9f1bac23-581c-4ebc-bd36-df60d764636d"
 BesselK = "0.3"
 BlockFactorizations = "1.2.1"
 DiffResults = "1.0"
+FFTW = "1"
 FillArrays = "0.12, 0.13"
 Flux = "0.13"
 ForwardDiff = "0.10"
