CompatHelper: bump compat for Functors to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ FFTW = "1"
 FillArrays = "0.12, 0.13"
 Flux = "0.13"
 ForwardDiff = "0.10"
-Functors = "0.2"
+Functors = "0.2, 0.4"
 IterativeSolvers = "0.9"
 KroneckerProducts = "1.0"
 LazyArrays = "0.22"
